tests/flow/new_spread/type_string.js
type O1 = {..."foo"}; // error
("foo": O1);
